kubernetes/lerna/k8s/deployment-production-stable.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-lerna-frontend-production-stable
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-lerna-frontend
        environment: production
        tier: frontend
        track: stable
