kubernetes/lerna/k8s/deployment-staging.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-lerna-frontend-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-lerna-frontend
        environment: staging
        tier: frontend
