kubernetes/lerna/k8s/service-production.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-production
spec:
  selector:
    app: k8s-lerna-frontend
    environment: production
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
