kubernetes/lerna/k8s/service-staging.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-staging
spec:
  selector:
    app: k8s-lerna-frontend
    environment: staging
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
