kubernetes/lerna/k8s/ingress-staging.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - echo1.k8s.tkvw.nl
        - echo2.k8s.tkvw.nl
      secretName: letsencrypt-staging
  rules:
    - host: echo1.k8s.tkvw.nl
      http:
        paths:
          - backend:
              serviceName: echo1
              servicePort: 80
    - host: echo2.k8s.tkvw.nl
      http:
        paths:
          - backend:
              serviceName: echo2
              servicePort: 80
